# -----------------------------------------------------------------------------------------------------
# Copyright (c) 2006-2021, Knut Reinert & Freie Universität Berlin
# Copyright (c) 2016-2021, Knut Reinert & MPI für molekulare Genetik
# This file may be used, modified and/or redistributed under the terms of the 3-clause BSD-License
# shipped with this file and also available at: https://github.com/seqan/raptor/blob/master/LICENSE.md
# -----------------------------------------------------------------------------------------------------

cmake_minimum_required (VERSION 3.8)

macro (add_cli_test_and_data)
    set (cli_test_target "${ARGV0}")
    add_cli_test (${cli_test_target}.cpp)
    target_use_datasources (${cli_test_target} FILES 1_1c.index)
    target_use_datasources (${cli_test_target} FILES 1_1.index)
    target_use_datasources (${cli_test_target} FILES 1_1.index_0)
    target_use_datasources (${cli_test_target} FILES 1_1.index_1)
    target_use_datasources (${cli_test_target} FILES 1_1.index_2)
    target_use_datasources (${cli_test_target} FILES 1_1.index_3)
    target_use_datasources (${cli_test_target} FILES 1bins19window.hibf)
    target_use_datasources (${cli_test_target} FILES 64bins19window.hibf)
    target_use_datasources (${cli_test_target} FILES 128bins19window.hibf)
    target_use_datasources (${cli_test_target} FILES 128bins19window0errorhibf.out)
    target_use_datasources (${cli_test_target} FILES 128bins19window1errorhibf.out)
    target_use_datasources (${cli_test_target} FILES 1bins19window0errorhibf.out)
    target_use_datasources (${cli_test_target} FILES 1bins19window1errorhibf.out)
    target_use_datasources (${cli_test_target} FILES 64bins19window0errorhibf.out)
    target_use_datasources (${cli_test_target} FILES 64bins19window1errorhibf.out)
    target_use_datasources (${cli_test_target} FILES 128binsemptyhibf.out)
    target_use_datasources (${cli_test_target} FILES 64binsemptyhibf.out)
    target_use_datasources (${cli_test_target} FILES 1binsemptyhibf.out)
    target_use_datasources (${cli_test_target} FILES 128bins19window0error.out)
    target_use_datasources (${cli_test_target} FILES 128bins19window0errorsocks.out)
    target_use_datasources (${cli_test_target} FILES 128bins19window1error.out)
    target_use_datasources (${cli_test_target} FILES 128bins19window.index)
    target_use_datasources (${cli_test_target} FILES 128bins23window1error.out)
    target_use_datasources (${cli_test_target} FILES 128bins23window.index)
    target_use_datasources (${cli_test_target} FILES 128binsempty.out)
    target_use_datasources (${cli_test_target} FILES 1bins19window0error.out)
    target_use_datasources (${cli_test_target} FILES 1bins19window0errorsocks.out)
    target_use_datasources (${cli_test_target} FILES 1bins19window1error.out)
    target_use_datasources (${cli_test_target} FILES 1bins19window.index)
    target_use_datasources (${cli_test_target} FILES 1bins23window1error.out)
    target_use_datasources (${cli_test_target} FILES 1bins23window.index)
    target_use_datasources (${cli_test_target} FILES 1binsempty.out)
    target_use_datasources (${cli_test_target} FILES 64bins19window0error.out)
    target_use_datasources (${cli_test_target} FILES 64bins19window0errorsocks.out)
    target_use_datasources (${cli_test_target} FILES 64bins19window1error.out)
    target_use_datasources (${cli_test_target} FILES 64bins19window.index)
    target_use_datasources (${cli_test_target} FILES 64bins23window1error.out)
    target_use_datasources (${cli_test_target} FILES 64bins23windowc.index)
    target_use_datasources (${cli_test_target} FILES 64bins23window.index)
    target_use_datasources (${cli_test_target} FILES 64binsempty.out)
    target_use_datasources (${cli_test_target} FILES bin1.fa)
    target_use_datasources (${cli_test_target} FILES bin1.fa.gz)
    target_use_datasources (${cli_test_target} FILES bin2.fa)
    target_use_datasources (${cli_test_target} FILES bin2.fa.gz)
    target_use_datasources (${cli_test_target} FILES bin3.fa)
    target_use_datasources (${cli_test_target} FILES bin3.fa.gz)
    target_use_datasources (${cli_test_target} FILES bin4.fa)
    target_use_datasources (${cli_test_target} FILES bin4.fa.gz)
    target_use_datasources (${cli_test_target} FILES query_empty.fq)
    target_use_datasources (${cli_test_target} FILES query.fq)
    target_use_datasources (${cli_test_target} FILES query_socks.fq)
endmacro ()

add_subdirectory (argument_parsing)
add_subdirectory (build)
add_subdirectory (search)
add_subdirectory (upgrade)

